# internal/api/server.gen.go
@@ -16,9 +16,11 @@ import (
 
 // Defines values for Currency.
 const (
-	EurBcv      Currency = "eur_bcv"
-	UsdBcv      Currency = "usd_bcv"
-	UsdtBinance Currency = "usdt_binance"
+	EurBcv           Currency = "eur_bcv"
+	UsdBcv           Currency = "usd_bcv"
+	UsdtBinance      Currency = "usdt_binance"
+	UsdtBinanceBuy   Currency = "usdt_binance_buy"
+	UsdtBinanceSell  Currency = "usdt_binance_sell"
 )
 
 // Valid indicates whether the value is a known member of the Currency enum.
@@ -29,6 +31,10 @@ func (e Currency) Valid() bool {
 	case UsdBcv:
 		return true
 	case UsdtBinance:
+		return true
+	case UsdtBinanceBuy:
+		return true
+	case UsdtBinanceSell:
 		return true
 	default:
 		return false
@@ -55,9 +61,11 @@ func (e HealthStatus) Valid() bool {
 
 // AllRates defines model for AllRates.
 type AllRates struct {
-	EurBcv      RateEntry `json:"eur_bcv"`
-	UsdBcv      RateEntry `json:"usd_bcv"`
-	UsdtBinance RateEntry `json:"usdt_binance"`
+	EurBcv          RateEntry `json:"eur_bcv"`
+	UsdBcv          RateEntry `json:"usd_bcv"`
+	UsdtBinance     RateEntry `json:"usdt_binance"`
+	UsdtBinanceBuy  RateEntry `json:"usdt_binance_buy"`
+	UsdtBinanceSell RateEntry `json:"usdt_binance_sell"`
 }
 
 // Currency defines model for Currency.
